Fix Dashlet overflow

--- a/aikau/src/main/resources/alfresco/dashlets/css/Dashlet.css
+++ b/aikau/src/main/resources/alfresco/dashlets/css/Dashlet.css
@@ -20,7 +20,7 @@
       padding: 5px 9px 5px 9px;
    }
    &__resize-bar {
-      background: linear-gradient(to bottom, rgba(255,255,255,0), #fff 50%);
+      background: transparent;
       bottom: 0;
       cursor: s-resize;
       cursor: ns-resize; /* Make sure this is after the s-resize value */
@@ -28,13 +28,35 @@
       left: 0;
       position: absolute;
       right: 0;
+      &:hover {
+         .alfresco-dashlets-Dashlet__resize-bar {
+            &__icon-holder {
+               background: #f6f6f6;
+            }
+            &__icon {
+               &, &:after {
+                  background: #ddd;
+               }
+            }
+         }
+      }
+      &__icon-holder {
+         background: #fff;
+         border-radius: 3px 3px 0 0;
+         box-sizing: border-box;
+         height: 15px;
+         margin: 0 auto;
+         padding: 5px 10px;
+         transition: background .3s ease-out;
+         width: 45px;
+      }
       &__icon {
-         margin: 5px auto 0;
          position: relative;
          &, &:after {
             background: #eee;
             border-radius: 1px;
             height: 2px;
+            transition: background .3s ease-out;
             width: 25px;
          }
          &:after {
@@ -91,7 +113,6 @@
    }
    &__body {
       background-color: #fff;
-      padding-bottom: 15px; /* This is referenced within Dashlet.js! */
       position: relative;
       a {
          cursor: pointer;
@@ -114,12 +135,12 @@
             line-height: 1.5;
          }
       }
-
       &__widgets {
+         box-sizing: border-box;
+         height: 100%;
          overflow: auto;
       }
    }
-   
    /* Same-level classes */
    &.smallpad {
       .alfresco-dashlets-Dashlet__body__widgets {
